--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0",
+    "github": "^14.0.0",
     "openai": "^4.20.0"
   },
   "devDependencies": {
@@ -31,4 +32,3 @@
   },
   "private": true
 }
-
