security: Enhance Firebase and API key protection 🔒
Enhanced .gitignore with comprehensive Firebase security patterns:

🔒 CRITICAL SECURITY IMPROVEMENTS:
- Added wildcard patterns for GoogleService-Info.plist in any directory
- Added variation patterns (GoogleService-Info*.plist)
- Added Firebase debug logs and temporary files
- Added API key and secrets protection patterns
- Added config file protection

🛡️ PRE-COMMIT HOOK INSTALLED:
- Scans for sensitive file patterns before commits
- Detects Google API keys (AIza...) in diffs
- Detects Firebase key patterns in content
- Blocks commits with explanatory error messages

📋 PREVENTS FUTURE INCIDENTS:
- Multiple layers of protection (gitignore + pre-commit hook)
- Covers common Firebase file variations and locations
- Protects against accidental API key commits
- Clear error messages for developers

Root cause: GoogleService-Info.plist was accidentally committed
Solution: Removed from git history + enhanced security measures
Prevention: Multi-layer protection system now in place

Status: Firebase keys should be regenerated as they were exposed

--- a/.gitignore
+++ b/.gitignore
@@ -91,9 +91,31 @@ fastlane/test_output
 
 iOSInjectionProject/
 
-# Firebase
+# Firebase - CRITICAL SECURITY
+# Never commit these files - they contain API keys and sensitive config
 GoogleService-Info.plist
 google-services.json
+**/GoogleService-Info.plist
+**/google-services.json
+GoogleService-Info*.plist
+google-services*.json
+
+# Firebase additional security
+.firebaserc.local
+firebase-debug.log*
+firebase-debug.*.log*
+.firebase/
+firebase.json.backup
+
+# API Keys and Secrets (additional protection)
+*.apikey
+*.secret
+**/secrets/
+**/config/production/
+**/config/staging/
+apikeys.plist
+secrets.plist
+config.plist
 
 # Environment files
 .env
